--- a/FrontEnd/ValedictorianFE/CSS/module.css
+++ b/FrontEnd/ValedictorianFE/CSS/module.css
@@ -1,4 +1,17 @@
 /* General Setup */
+.homeBtn{
+
+    position: absolute;
+    font-weight: bold;
+    background: #5DADE2;
+    padding: 5px 20px 5px 20px;
+    left: 5px;
+    top: 10px;
+    border-radius: 10px;
+    border: none;
+
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
